# ColorCounter

./: .gitignore  CMakeLists.txt  ColorListBox.cpp  ColorListBox.h  ColorPercent.cpp  ColorPercent.h  Histogram.cpp  HueProcessor.cpp  HueProcessor.h  ImagePanel.cpp  ImageProcessing.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  README.md
osx/ColorCounter.app/Contents/: Info.plist
osx/ColorCounter.app/Contents/MacOS/: launch.sh
osx/ColorCounter.app/Contents/Resources/: ColorCounter.icns
src/: ColorListBox.cpp  ColorListBox.h  ColorPercent.cpp  ColorPercent.h  Histogram.cpp  Histogram.h  HistogramPlotter.cpp  HistogramPlotter.h  HueHistogram.cpp  HueHistogram.h  HueProcessor.cpp  HueProcessor.h  ImagePanel.cpp  ImagePanel.h  ImageProcessing.cpp  ImageProcessing.h  Main.cpp  Main.h  MainWindow.cpp  MainWindow.h
win32/: ColorCounter.rc  resource.h
